--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,7 +10,7 @@
 @import "./components/modal.scss";
 /* Pages */
 @import "./pages/photographers.scss";
-@import "./pages/photgrapher.scss";
+@import "./pages/photographer.scss";
 
 body{
     font-family: $police;  
