--- a/sass/components/button.scss
+++ b/sass/components/button.scss
@@ -19,12 +19,13 @@
   }
 }
 .btnStickyTop {
-  //TODO - JS: display when scroll
   display: none;
-  /*  display: block; */
   position: sticky;
-  top: 0;
-  button {
+  top: 15px;
+  a:link{
+    text-decoration: none;
+  }
+  span {
     background: $secondary;
     padding: 5px;
   }
@@ -53,86 +54,146 @@
 }
 
 
-  .btnDrop{
-    background: $primary;
-    color: white;
-    border: none;
-    padding: 14px 12px;
-    font-weight: 600;
-    cursor: pointer;
-    font-size: 12px;
-
-    &:hover{
-      background: $secondary;
-      color: black;
-      border-radius: 0;
-      border-top-left-radius: $borderRadiusBtn;
-      border-top-right-radius: $borderRadiusBtn;
+.btnDrop{
+background: $primary;
+color: white;
+border: none;
+padding: 14px 12px;
+font-weight: 600;
+cursor: pointer;
+font-size: 12px;
+&:hover{
+  background: $secondary;
+  color: black;
+  border-radius: 0;
+  border-top-left-radius: $borderRadiusBtn;
+  border-top-right-radius: $borderRadiusBtn;
+}
+&:focus{
+  background: $secondary;
+  color: black;
+}
+}       
+.drop{
+  .pop{
+    display: flex;
+    .fa-chevron-up{
+      display: none;
     }
     &:focus{
-      background: $secondary;
-      color: black;
-    }
-  }       
-  .drop{
-      .pop{
-        display: flex;
-        .fa-chevron-up{
-          display: none;
-        }
-        &:hover{
-          .fa-chevron-down{
-            display: none;
-          }
-          .fa-chevron-up{
-            display: block;
-          }
-        }
-        &:focus{
-          .fa-chevron-down{
-            display: none;
-          }
-          .fa-chevron-up{
-            display: block; 
-          }
-          .drop__content{
-            display: block;
-          }
-         
-        }
-       
-      }
-      &:hover{
-        .drop__content{
-            display: block;
-        }
-      }
-      &:focus{
-        .drop__content{
-          display: block;
-      }
-      }
-      .drop__content{
+      .fa-chevron-down{
         display: none;
       }
-      .drop__content-btn{
+      .fa-chevron-up{
+        display: block;
+      }
+      .drop__content{
         display: flex;
         flex-direction: column;
       }
     }
-    
-
-
-
-.pop{
-  &:hover{
-    border-radius: 0;
-    border-top-left-radius: $borderRadiusBtn;
-    border-top-right-radius: $borderRadiusBtn;
-    .name{
-      border-bottom-left-radius: $borderRadiusBtn;
-      border-bottom-right-radius: $borderRadiusBtn;
+    &:hover{
+      .fa-chevron-down{
+        display: none;
+      }
+      .fa-chevron-up{
+        display: block;
+      }
     }
   }
+  &:hover{
+    .drop__content{
+      display: flex;
+      flex-direction: column;
+      position: relative;
+    }
+  }
+  &:focus{
+    .drop__content{
+      display: flex;
+      flex-direction: column;
+    }
+  }
+}
+.drop__content{
+  display: none;
+}
 
+.dropdown{
+  position: relative;
+}
+.btn {
+  display: inline-flex;
+  align-items: center;
+  font-family: HelvNeueOrange,Helvetica Neue,Helvetica,Arial,Liberation Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
+  font-weight: 700;
+  color: #000;
+  text-align: center;
+  text-decoration: none;
+  vertical-align: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  background-color: transparent;
+  border: .125rem solid transparent;
+  padding: calc(.5rem - 1px) 1.125rem calc(.5rem + 1px);
+  font-size: 1rem;
+  line-height: 1.25;
+  border-radius: 0;
+  transition: outline-offset .15s ease-in-out;
+  outline-offset: .25rem;
+}
+.dropdown-toggle {
+  padding: .5rem .625rem;
+  color: #000;
+  white-space: nowrap;
+  background-color: #fff;
+  border-color: #ccc;
+}
+.dropdown-menu {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  z-index: 1000;
+  display: none;
+  float: left;
+  min-width: 10rem;
+  padding: 0;
+  margin: -2px 0 0;
+  font-size: 1rem;
+  color: #000;
+  text-align: left;
+  list-style: none;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: .125rem solid #ccc;
+}
+li {
+  display: list-item;
+  text-align: -webkit-match-parent;
+}
+.dropdown-item {
+  display: block;
+  width: 100%;
+  padding: .625rem .625rem;
+  clear: both;
+  font-weight: 700;
+  color: #000;
+  text-align: inherit;
+  text-decoration: none;
+  white-space: nowrap;
+  background-color: transparent;
+  border: 0;
+}
+.dropdown-toggle::after {
+  display: inline-flex;
+  align-self: center;
+  margin-left: .625rem;
+  content: "";
+  border-top: .4375rem solid;
+  border-right: .4375rem solid transparent;
+  border-bottom: 0;
+  border-left: .4375rem solid transparent;
+  transform: translateY(.0625rem);
 }
