--- a/sass/components/button.scss
+++ b/sass/components/button.scss
@@ -53,7 +53,6 @@
   border: none;
 }
 
-
 .btnDrop{
 background: $primary;
 color: white;
@@ -75,6 +74,8 @@ font-size: 12px;
 }
 }       
 .drop{
+  position: absolute ;
+  left: 100px;
   .pop{
     display: flex;
     .fa-chevron-up{
@@ -108,10 +109,11 @@ font-size: 12px;
       position: relative;
     }
   }
-  &:focus{
+  &:focus{      
     .drop__content{
       display: flex;
       flex-direction: column;
+      
     }
   }
 }
@@ -119,81 +121,5 @@ font-size: 12px;
   display: none;
 }
 
-.dropdown{
-  position: relative;
-}
-.btn {
-  display: inline-flex;
-  align-items: center;
-  font-family: HelvNeueOrange,Helvetica Neue,Helvetica,Arial,Liberation Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
-  font-weight: 700;
-  color: #000;
-  text-align: center;
-  text-decoration: none;
-  vertical-align: middle;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  background-color: transparent;
-  border: .125rem solid transparent;
-  padding: calc(.5rem - 1px) 1.125rem calc(.5rem + 1px);
-  font-size: 1rem;
-  line-height: 1.25;
-  border-radius: 0;
-  transition: outline-offset .15s ease-in-out;
-  outline-offset: .25rem;
-}
-.dropdown-toggle {
-  padding: .5rem .625rem;
-  color: #000;
-  white-space: nowrap;
-  background-color: #fff;
-  border-color: #ccc;
-}
-.dropdown-menu {
-  position: absolute;
-  top: 100%;
-  left: 0;
-  z-index: 1000;
-  display: none;
-  float: left;
-  min-width: 10rem;
-  padding: 0;
-  margin: -2px 0 0;
-  font-size: 1rem;
-  color: #000;
-  text-align: left;
-  list-style: none;
-  background-color: #fff;
-  background-clip: padding-box;
-  border: .125rem solid #ccc;
-}
-li {
-  display: list-item;
-  text-align: -webkit-match-parent;
-}
-.dropdown-item {
-  display: block;
-  width: 100%;
-  padding: .625rem .625rem;
-  clear: both;
-  font-weight: 700;
-  color: #000;
-  text-align: inherit;
-  text-decoration: none;
-  white-space: nowrap;
-  background-color: transparent;
-  border: 0;
-}
-.dropdown-toggle::after {
-  display: inline-flex;
-  align-self: center;
-  margin-left: .625rem;
-  content: "";
-  border-top: .4375rem solid;
-  border-right: .4375rem solid transparent;
-  border-bottom: 0;
-  border-left: .4375rem solid transparent;
-  transform: translateY(.0625rem);
-}
+
+
